--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="app">
         <div class="product">
 
-            <div class="product-image">
-                <img v-bind:src="image" alt="">
+            <div class="product-image" >
+                <img v-bind:src="image" alt="{{vColor}}">
             </div>
             <!-- shorthabd -->
             <div class="product-info">
@@ -29,10 +29,15 @@
                 <ul>
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
-                <div v-for="variant in variants" :key="variant.vid">
-                    <p>{{variant.vColor}}</p>
+                <div v-for="variant in variants"
+                    :key="variant.vid"
+                    class="color-box"
+                    :style =" {backgroundColor: variant.vColor}"
+                    @mouseover='updateProduct(variant.vImage)'>
+                   
                 </div>
                 <button v-on:click="addToCart">Add to Cart</button>
+                <button @click="removeFromCart">Remove from Cart</button>
                 <div class="cart">
                     <p>Cart({{cart}})</p>
                 </div>
